--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@ Email : Sameerad2001@gmail.com
 
 <head>
     <meta charset="UTF-8">
-    <title>Tik Tak Toe</title>
+    <title>Tik Tac Toe</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="img/sam.ico" />
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
